--- a/docs_old/intro.html
+++ b/docs_old/intro.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Marcy Shieh" />
 
 
-<meta name="date" content="2021-01-24" />
+<meta name="date" content="2020-12-10" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -51,6 +51,8 @@
 
 
 <script src="libs/accessible-code-block-0.0.1/empty-anchor.js"></script>
+<link href="libs/anchor-sections-1.0/anchor-sections.css" rel="stylesheet" />
+<script src="libs/anchor-sections-1.0/anchor-sections.js"></script>
 
 
 
@@ -89,60 +91,13 @@
 <li class="chapter" data-level="3.8.2" data-path="setting-up.html"><a href="setting-up.html#check-if-things-happened-as-expected"><i class="fa fa-check"></i><b>3.8.2</b> Check if things happened as expected</a></li>
 </ul></li>
 </ul></li>
-<li class="chapter" data-level="4" data-path="workflow.html"><a href="workflow.html"><i class="fa fa-check"></i><b>4</b> Workflow</a><ul>
-<li class="chapter" data-level="4.1" data-path="workflow.html"><a href="workflow.html#why-create-a-project"><i class="fa fa-check"></i><b>4.1</b> Why create a project?</a></li>
-<li class="chapter" data-level="4.2" data-path="workflow.html"><a href="workflow.html#create-proj"><i class="fa fa-check"></i><b>4.2</b> Creating a project in RStudio</a></li>
-<li class="chapter" data-level="4.3" data-path="workflow.html"><a href="workflow.html#push-git"><i class="fa fa-check"></i><b>4.3</b> Pushing a R Markdown document to your Github repository</a></li>
-<li class="chapter" data-level="4.4" data-path="workflow.html"><a href="workflow.html#write-paper"><i class="fa fa-check"></i><b>4.4</b> Writing a paper in R Markdown</a><ul>
-<li class="chapter" data-level="4.4.1" data-path="workflow.html"><a href="workflow.html#prerequisites"><i class="fa fa-check"></i><b>4.4.1</b> Prerequisites</a></li>
-<li class="chapter" data-level="4.4.2" data-path="workflow.html"><a href="workflow.html#installing-papaja"><i class="fa fa-check"></i><b>4.4.2</b> Installing papaja</a></li>
-<li class="chapter" data-level="4.4.3" data-path="workflow.html"><a href="workflow.html#opening-the-template"><i class="fa fa-check"></i><b>4.4.3</b> Opening the template</a></li>
-<li class="chapter" data-level="4.4.4" data-path="workflow.html"><a href="workflow.html#getting-to-know-your-apa-r-markdown-template"><i class="fa fa-check"></i><b>4.4.4</b> Getting to know your APA R Markdown template</a></li>
+<li class="chapter" data-level="4" data-path="methods.html"><a href="methods.html"><i class="fa fa-check"></i><b>4</b> Methods</a></li>
+<li class="chapter" data-level="5" data-path="applications.html"><a href="applications.html"><i class="fa fa-check"></i><b>5</b> Applications</a><ul>
+<li class="chapter" data-level="5.1" data-path="applications.html"><a href="applications.html#example-one"><i class="fa fa-check"></i><b>5.1</b> Example one</a></li>
+<li class="chapter" data-level="5.2" data-path="applications.html"><a href="applications.html#example-two"><i class="fa fa-check"></i><b>5.2</b> Example two</a></li>
 </ul></li>
-<li class="chapter" data-level="4.5" data-path="workflow.html"><a href="workflow.html#lets-talk-about-code-chunks"><i class="fa fa-check"></i><b>4.5</b> Let’s talk about code chunks</a></li>
-<li class="chapter" data-level="4.6" data-path="workflow.html"><a href="workflow.html#code-chunks-in-the-papaja-template"><i class="fa fa-check"></i><b>4.6</b> Code chunks in the papaja template</a></li>
-<li class="chapter" data-level="4.7" data-path="workflow.html"><a href="workflow.html#body-of-the-papaja-template"><i class="fa fa-check"></i><b>4.7</b> Body of the papaja template</a></li>
-</ul></li>
-<li class="chapter" data-level="5" data-path="bibliography.html"><a href="bibliography.html"><i class="fa fa-check"></i><b>5</b> Bibliography</a><ul>
-<li class="chapter" data-level="5.1" data-path="bibliography.html"><a href="bibliography.html#download-zotero"><i class="fa fa-check"></i><b>5.1</b> Downloading Zotero</a></li>
-<li class="chapter" data-level="5.2" data-path="bibliography.html"><a href="bibliography.html#download-bbt"><i class="fa fa-check"></i><b>5.2</b> Downloading Better Bibtex for Zotero</a></li>
-<li class="chapter" data-level="5.3" data-path="bibliography.html"><a href="bibliography.html#load-citr"><i class="fa fa-check"></i><b>5.3</b> Loading the citr package</a></li>
-</ul></li>
-<li class="chapter" data-level="6" data-path="git-branches.html"><a href="git-branches.html"><i class="fa fa-check"></i><b>6</b> Git Branches</a><ul>
-<li class="chapter" data-level="6.1" data-path="git-branches.html"><a href="git-branches.html#create-branch"><i class="fa fa-check"></i><b>6.1</b> Creating a branch</a></li>
-<li class="chapter" data-level="6.2" data-path="git-branches.html"><a href="git-branches.html#working-in-the-branch"><i class="fa fa-check"></i><b>6.2</b> Working in the branch</a></li>
-<li class="chapter" data-level="6.3" data-path="git-branches.html"><a href="git-branches.html#delete-branch"><i class="fa fa-check"></i><b>6.3</b> Deleting the branch</a></li>
-<li class="chapter" data-level="6.4" data-path="git-branches.html"><a href="git-branches.html#restore-branch"><i class="fa fa-check"></i><b>6.4</b> Restoring the branch</a></li>
-<li class="chapter" data-level="6.5" data-path="git-branches.html"><a href="git-branches.html#use-cmd"><i class="fa fa-check"></i><b>6.5</b> Using Git on the command line</a></li>
-</ul></li>
-<li class="chapter" data-level="7" data-path="functions.html"><a href="functions.html"><i class="fa fa-check"></i><b>7</b> Functions</a><ul>
-<li class="chapter" data-level="7.1" data-path="functions.html"><a href="functions.html#loops"><i class="fa fa-check"></i><b>7.1</b> Loops</a><ul>
-<li class="chapter" data-level="7.1.1" data-path="functions.html"><a href="functions.html#using-loops-in-a-dataset"><i class="fa fa-check"></i><b>7.1.1</b> Using loops in a dataset</a></li>
-<li class="chapter" data-level="7.1.2" data-path="functions.html"><a href="functions.html#vectorizing-the-process"><i class="fa fa-check"></i><b>7.1.2</b> Vectorizing the process</a></li>
-</ul></li>
-<li class="chapter" data-level="7.2" data-path="functions.html"><a href="functions.html#applying-lapply"><i class="fa fa-check"></i><b>7.2</b> Applying lapply()</a></li>
-<li class="chapter" data-level="7.3" data-path="functions.html"><a href="functions.html#indexing-your-list"><i class="fa fa-check"></i><b>7.3</b> Indexing your list</a></li>
-<li class="chapter" data-level="7.4" data-path="functions.html"><a href="functions.html#scoped-verbs"><i class="fa fa-check"></i><b>7.4</b> Scoped verbs</a><ul>
-<li class="chapter" data-level="7.4.1" data-path="functions.html"><a href="functions.html#using-if"><i class="fa fa-check"></i><b>7.4.1</b> Using if()</a></li>
-<li class="chapter" data-level="7.4.2" data-path="functions.html"><a href="functions.html#using-at"><i class="fa fa-check"></i><b>7.4.2</b> Using at()</a></li>
-<li class="chapter" data-level="7.4.3" data-path="functions.html"><a href="functions.html#defining-your-own-functions"><i class="fa fa-check"></i><b>7.4.3</b> Defining your own functions</a></li>
-<li class="chapter" data-level="7.4.4" data-path="functions.html"><a href="functions.html#applying-more-than-one-function"><i class="fa fa-check"></i><b>7.4.4</b> Applying more than one function</a></li>
-</ul></li>
-<li class="chapter" data-level="7.5" data-path="functions.html"><a href="functions.html#nesting"><i class="fa fa-check"></i><b>7.5</b> Nesting data frames</a></li>
-</ul></li>
-<li class="chapter" data-level="8" data-path="base-r-vs-tidyverse.html"><a href="base-r-vs-tidyverse.html"><i class="fa fa-check"></i><b>8</b> Base R vs. Tidyverse</a><ul>
-<li class="chapter" data-level="8.1" data-path="base-r-vs-tidyverse.html"><a href="base-r-vs-tidyverse.html#but-first-whats-tidyverse"><i class="fa fa-check"></i><b>8.1</b> But first, what’s Tidyverse?</a></li>
-<li class="chapter" data-level="8.2" data-path="base-r-vs-tidyverse.html"><a href="base-r-vs-tidyverse.html#r-basics"><i class="fa fa-check"></i><b>8.2</b> R basics</a><ul>
-<li class="chapter" data-level="8.2.1" data-path="base-r-vs-tidyverse.html"><a href="base-r-vs-tidyverse.html#use-r-as-a-calculator"><i class="fa fa-check"></i><b>8.2.1</b> Use R as a calculator</a></li>
-<li class="chapter" data-level="8.2.2" data-path="base-r-vs-tidyverse.html"><a href="base-r-vs-tidyverse.html#creating-objects"><i class="fa fa-check"></i><b>8.2.2</b> Creating objects</a></li>
-<li class="chapter" data-level="8.2.3" data-path="base-r-vs-tidyverse.html"><a href="base-r-vs-tidyverse.html#creating-vectors"><i class="fa fa-check"></i><b>8.2.3</b> Creating vectors</a></li>
-</ul></li>
-<li class="chapter" data-level="8.3" data-path="base-r-vs-tidyverse.html"><a href="base-r-vs-tidyverse.html#load-data"><i class="fa fa-check"></i><b>8.3</b> Loading data into R</a></li>
-<li class="chapter" data-level="8.4" data-path="base-r-vs-tidyverse.html"><a href="base-r-vs-tidyverse.html#comparing-base-r-vs.-tidyverse"><i class="fa fa-check"></i><b>8.4</b> Comparing base R vs. Tidyverse</a><ul>
-<li class="chapter" data-level="8.4.1" data-path="base-r-vs-tidyverse.html"><a href="base-r-vs-tidyverse.html#base-r"><i class="fa fa-check"></i><b>8.4.1</b> Base R</a></li>
-<li class="chapter" data-level="8.4.2" data-path="base-r-vs-tidyverse.html"><a href="base-r-vs-tidyverse.html#tidy"><i class="fa fa-check"></i><b>8.4.2</b> Tidyverse</a></li>
-</ul></li>
-</ul></li>
+<li class="chapter" data-level="6" data-path="final-words.html"><a href="final-words.html"><i class="fa fa-check"></i><b>6</b> Final Words</a></li>
+<li class="chapter" data-level="" data-path="references.html"><a href="references.html"><i class="fa fa-check"></i>References</a></li>
 <li class="divider"></li>
 <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
 
